fixed li spacing

--- a/src/components/Blog/BlogPage.module.css
+++ b/src/components/Blog/BlogPage.module.css
@@ -46,9 +46,10 @@ div.post p:first-of-type{
 }
 
 div.post ul li {
-  padding-bottom: 2%;
+  padding-bottom: 1%;
 }
- .post :is(h1, h2) {
+
+.post :is(h1, h2) {
   color: white;
   text-decoration: underline;
 }
